[gd_scene load_steps=9 format=4 uid="uid://bj451436lnaqo"]

[ext_resource type="Texture2D" uid="uid://cqhoidm6a2ami" path="res://rails.png" id="1_4sor6"]
[ext_resource type="Script" path="res://rails.gd" id="2_oee5r"]
[ext_resource type="AudioStream" uid="uid://b1lgkk2ec4a6c" path="res://sounds/error.ogg" id="4_2xn0g"]
[ext_resource type="AudioStream" uid="uid://1rkr8souukfy" path="res://sounds/score.ogg" id="5_35er8"]
[ext_resource type="AudioStream" uid="uid://cqmsridmfrloj" path="res://sounds/switch-activate.ogg" id="6_5y7s6"]
[ext_resource type="AudioStream" uid="uid://cvt1kagvaao0y" path="res://sounds/switch-deactivate.ogg" id="7_ndf4p"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_2jq3i"]
texture = ExtResource("1_4sor6")
texture_region_size = Vector2i(64, 64)
0:0/size_in_atlas = Vector2i(1, 2)
0:0/0 = 0
0:0/0/texture_origin = Vector2i(0, -32)
0:0/0/custom_data_0 = 1
0:0/0/custom_data_1 = true
1:0/size_in_atlas = Vector2i(1, 2)
1:0/0 = 0
1:0/0/texture_origin = Vector2i(0, -32)
1:0/0/custom_data_0 = 1
1:0/0/custom_data_1 = true
1:0/0/custom_data_2 = true
2:0/size_in_atlas = Vector2i(1, 2)
2:0/0 = 0
2:0/0/texture_origin = Vector2i(0, 32)
2:0/0/custom_data_0 = -1
2:0/0/custom_data_1 = true
3:0/size_in_atlas = Vector2i(1, 2)
3:0/0 = 0
3:0/0/texture_origin = Vector2i(0, 32)
3:0/0/custom_data_0 = -1
3:0/0/custom_data_1 = true
3:0/0/custom_data_2 = true
4:0/0 = 0
0:2/0 = 0
0:2/0/custom_data_3 = true
1:2/0 = 0
1:2/0/custom_data_3 = true
1:2/0/custom_data_4 = 1
2:2/0 = 0
2:2/0/custom_data_3 = true
2:2/0/custom_data_4 = 2
3:2/0 = 0
3:2/0/custom_data_3 = true
3:2/0/custom_data_4 = 3
4:2/0 = 0
4:2/0/custom_data_3 = true
4:2/0/custom_data_4 = 4
5:2/0 = 0
5:2/0/custom_data_3 = true
5:2/0/custom_data_4 = 5
0:3/0 = 0
1:3/0 = 0
1:3/0/custom_data_4 = 1
2:3/0 = 0
2:3/0/custom_data_4 = 2
3:3/0 = 0
3:3/0/custom_data_4 = 3
4:3/0 = 0
4:3/0/custom_data_4 = 4
5:3/0 = 0
5:3/0/custom_data_4 = 5
0:4/0 = 0
1:4/0 = 0
1:4/0/custom_data_4 = 1
2:4/0 = 0
2:4/0/custom_data_4 = 2
3:4/0 = 0
3:4/0/custom_data_4 = 3
4:4/0 = 0
4:4/0/custom_data_4 = 4
5:4/0 = 0
5:4/0/custom_data_4 = 5
0:5/0 = 0
1:5/0 = 0
1:5/0/custom_data_4 = 1
2:5/0 = 0
2:5/0/custom_data_4 = 2
3:5/0 = 0
3:5/0/custom_data_4 = 3
4:5/0 = 0
4:5/0/custom_data_4 = 4
5:5/0 = 0
5:5/0/custom_data_4 = 5
5:0/0 = 0
5:0/0/custom_data_4 = -1
5:1/0 = 0
5:1/0/custom_data_4 = -1
4:1/0 = 0
4:1/0/custom_data_4 = -1
5:6/0 = 0
5:6/0/custom_data_4 = 5
4:6/0 = 0
4:6/0/custom_data_4 = 4
3:6/0 = 0
3:6/0/custom_data_4 = 3
2:6/0 = 0
2:6/0/custom_data_4 = 2
1:6/0 = 0
1:6/0/custom_data_4 = 1
0:6/0 = 0

[sub_resource type="TileSet" id="TileSet_x0mfg"]
tile_size = Vector2i(64, 64)
custom_data_layer_0/name = "switch_direction"
custom_data_layer_0/type = 2
custom_data_layer_1/name = "is_switch"
custom_data_layer_1/type = 1
custom_data_layer_2/name = "is_active"
custom_data_layer_2/type = 1
custom_data_layer_3/name = "is_end"
custom_data_layer_3/type = 1
custom_data_layer_4/name = "train_color"
custom_data_layer_4/type = 2
sources/0 = SubResource("TileSetAtlasSource_2jq3i")

[node name="Rails" type="TileMapLayer"]
tile_map_data = PackedByteArray("AAAAAAAAAAAEAAIAAAABAAAAAAAEAAIAAAACAAAAAAAEAAIAAAADAAAAAAABAAIAAAAEAAAAAAAEAAIAAAAFAAAAAAAEAAIAAAAGAAEAAAABAAIAAAAHAAEAAAAEAAIAAAAHAAAAAAAEAAIAAAAIAAAAAAAEAAIAAAAJAAAAAAAEAAIAAAAGAAAAAAAEAAIAAAAAAAEAAAAEAAIAAAABAAEAAAAEAAIAAAACAAEAAAAEAAIAAAADAAEAAAAEAAIAAAAEAAEAAAAEAAIAAAAFAAEAAAAEAAIAAAAJAAEAAAAEAAIAAAAKAAEAAAAEAAIAAAAKAAAAAAABAAIAAAALAAAAAAAEAAIAAAALAAEAAAAEAAIAAAAIAAEAAAAEAAIAAAAAAAIAAAAEAAIAAAABAAIAAAAEAAIAAAACAAIAAAAEAAIAAAADAAIAAAABAAIAAAAEAAIAAAAEAAIAAAAFAAIAAAAEAAIAAAAGAAIAAAAEAAIAAAAHAAIAAAAEAAIAAAAIAAIAAAAEAAIAAAAJAAIAAAAEAAIAAAAKAAIAAAAEAAIAAAALAAIAAAABAAIAAAALAAMAAAAEAAIAAAAKAAMAAAAEAAIAAAAJAAMAAAAEAAIAAAAIAAMAAAACAAIAAAAHAAMAAAAEAAIAAAAGAAMAAAAEAAIAAAAFAAMAAAAEAAIAAAAEAAMAAAAEAAIAAAADAAMAAAAEAAIAAAACAAMAAAAEAAIAAAABAAMAAAAEAAIAAAAAAAMAAAAEAAIAAAAAAAQAAAAEAAIAAAABAAQAAAAEAAIAAAACAAQAAAAEAAIAAAADAAQAAAAEAAIAAAAEAAQAAAAEAAIAAAAFAAQAAAACAAIAAAAGAAQAAAAEAAIAAAAHAAQAAAAEAAIAAAAIAAQAAAAEAAIAAAAJAAQAAAAEAAIAAAAKAAQAAAABAAIAAAALAAQAAAAEAAIAAAAMAAAAAAAEAAIAAAANAAAAAAAEAAIAAAAMAAEAAAAEAAIAAAANAAEAAAAEAAIAAAAMAAIAAAAEAAIAAAANAAIAAAACAAIAAAAMAAMAAAAEAAIAAAANAAMAAAABAAIAAAANAAQAAAAEAAIAAAAMAAQAAAAEAAIAAAAOAAAAAAAEAAIAAAAPAAAAAAAEAAIAAAAPAAEAAAAEAAIAAAAPAAIAAAAEAAIAAAAPAAMAAAAEAAIAAAAOAAMAAAAEAAIAAAAOAAQAAAAEAAIAAAAOAAIAAAAEAAIAAAAOAAEAAAAEAAIAAAAPAAQAAAAEAAIAAAAQAAAAAAAEAAIAAAAQAAEAAAACAAIAAAAQAAIAAAAEAAIAAAAQAAMAAAAEAAIAAAAQAAQAAAAEAAIAAAAAAAUAAAAEAAIAAAABAAUAAAACAAIAAAACAAUAAAAEAAIAAAADAAUAAAAEAAIAAAAEAAUAAAACAAIAAAAFAAUAAAAEAAIAAAAGAAUAAAAEAAIAAAAHAAUAAAAEAAIAAAAIAAUAAAAEAAIAAAAJAAUAAAAEAAIAAAAKAAUAAAAEAAIAAAALAAUAAAAEAAIAAAAMAAUAAAAEAAIAAAANAAUAAAAEAAIAAAAOAAUAAAAEAAIAAAAPAAUAAAAEAAIAAAAQAAUAAAAEAAIAAAARAAUAAAAEAAIAAAARAAQAAAABAAIAAAARAAMAAAACAAIAAAARAAIAAAAEAAIAAAARAAEAAAAEAAIAAAARAAAAAAAEAAIAAAASAAAAAAAEAAIAAAASAAEAAAAEAAIAAAASAAIAAAAEAAIAAAASAAMAAAAEAAIAAAASAAQAAAAEAAIAAAASAAUAAAAEAAIAAAATAAAAAAAAAAAAAAATAAEAAAABAAAAAAATAAIAAAACAAAAAAATAAMAAAADAAAAAAATAAQAAAAEAAAAAAATAAUAAAAFAAAAAAA=")
tile_set = SubResource("TileSet_x0mfg")
script = ExtResource("2_oee5r")

[node name="Trains" type="Node2D" parent="."]

[node name="ErrorAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_2xn0g")

[node name="ScoreAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_35er8")

[node name="ActivateSwitchAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_5y7s6")

[node name="DeactivateSwitchAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_ndf4p")

[node name="TrainCreationTimer" type="Timer" parent="."]

[connection signal="timeout" from="TrainCreationTimer" to="." method="set_train_on_tracks"]
